--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
+# 基础框架
 flask==2.0.1
 Werkzeug==2.0.1
+gunicorn==23.0.0
+
+# 明确指定numpy版本，需要在pandas之前安装
+numpy==1.24.3
+
+# OCR相关库
 ocrmypdf==15.2.0
 pikepdf==8.7.1
-gunicorn==23.0.0
 PyPDF2==3.0.1
+
+# 数据处理库，确保与numpy兼容
 pandas==2.0.3
 openpyxl==3.1.2
