--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,14 +10,12 @@ services:
     ports:
       - "5002:5000"  # 将容器的5000端口映射到主机的5002端口
     volumes:
-      - ./uploads:/app/uploads  # 挂载上传目录，保证数据持久化
+      - ./uploads:/app/uploads:rw  # 挂载上传目录，确保读写权限
     environment:
       - SECRET_KEY=your-secret-key-here  # 应用密钥，生产环境中应使用强密码
       - MAX_CONTENT_LENGTH=52428800      # 50MB 最大上传文件大小
       - MAX_FILES=10                     # 最大同时处理文件数
       - CONCURRENT_PROCESSES=2           # OCR处理并发数
-      # 添加环境变量解决NumPy/Pandas兼容性问题
-      - PYTHONWARNINGS=ignore::RuntimeWarning
     deploy:
       resources:
         limits:
@@ -35,6 +33,8 @@ services:
       options:
         max-size: "20m"
         max-file: "5"
+    # 添加用户映射
+    user: "1000:1000"  # 使用典型的非root用户ID/组ID（可能需要调整为主机上的用户ID）
     ulimits:
       nofile:
         soft: 10000                      # 增加文件描述符限制
